--- a/web/src/components/header.module.css
+++ b/web/src/components/header.module.css
@@ -69,7 +69,6 @@
 }
 
 .nav {
-  font-weight: bold;
   height: 100%;
   display: block;
 
